All corrections done.  Spell-checked and consistency checked.  Ready for submission.

--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -1,11 +1,11 @@
-\thispagestyle{empty}
-\begin{raggedleft}
-\vspace*{23mm}
-\hfill {\huge {\bf {List of Acronyms}}} \\
-\vspace{6mm}
-\hfill \rule{4in}{.015in} \\
-\vspace{19mm}
-\end{raggedleft}
+%\thispagestyle{fancy}
+%\begin{raggedleft}
+%\vspace*{23mm}
+%\hfill {\huge {\bf {List of Acronyms}}} \\
+%\vspace{6mm}
+%\hfill \rule{4in}{.015in} \\
+%\vspace{19mm}
+%\end{raggedleft}
 
 
 
@@ -15,8 +15,8 @@
 % following on each page after the first:
 %
 % \thispagestyle{fancyplain}
-% \lhead[\fancyplain{}{\vspace{4mm}\thepage \vspace{0mm}}]{}
-% \rhead[]{\fancyplain{}{\vspace{4mm}\thepage \vspace{0mm}}}
+ %\lhead[]\fancyplain{}{\vspace{4mm}\thepage \vspace{0mm}}]{}
+ %\rhead[]{\fancyplain{}{\vspace{4mm}\thepage \vspace{0mm}}}
 % \cfoot{}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
