--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -239,7 +239,7 @@
 \department{Department of Physics \& Astronomy}  
 \thesistitle{Dust-Affected Models of Characteristic Line Emission in Supernovae}
 \thesisauthor{\huge Antonia Bevan \vspace{0.8cm}}
-\dedication{\it{In loving memory of Molly and Bill Siddle.}} 
+\dedication{\it{In loving memory of Mollie and Bill Siddle.}} 
 %\supervisorone{Prof. Michael J. Barlow}
 %\examinerone{Dr Kenneth Wood}
 %\supervisortwo{Dr Jeremy A. Yates}
@@ -276,8 +276,66 @@
 \addcontentsline{toc}{chapter}{List of Acronyms}
 
 
-%%List Of Acronyms
-\include{front/acronyms}
+\listofacs
+
+AAT - Anglo--Australian Telescope
+
+AGB - Asymptotic Giant Branch
+
+ALMA - Atacama Large Millimetre Array
+
+API - Application Program Interface
+
+CCD - Charge--Coupled Device
+
+CCSN(e) - Core--Collapse Supernova(e)
+
+CDE - Continuous Distribution of Ellipsoids
+
+CTIO - Cerro Tololo Inter--American Observatory
+
+ER - Equatorial Ring
+
+ESO - European Southern Observatory
+
+FWHM - Full--Width Half Maximum
+
+HST - Hubble Space Telescope
+
+HWZI - Half--Width Zero Intensity
+
+IR - Infrared
+
+ISM - Interstellar Medium
+
+LMC - Large Magellanic Cloud
+
+MC - Monte Carlo
+
+MCMC - Markov Chain Monte Carlo 
+
+MDM - Michigan--Dartmouth--Massachusetts Institute of Technology
+
+MMT - Multiple Mirror Telescope
+
+MRN - The \citet*{Mathis1977} grain distribution
+
+MSE - Mean Squared Error
+
+NASA - National Aeronautics and Space Administration
+
+QSO - Quasi-Stellar Object (Quasar)
+
+SCUBA - Sub-millimetre Common--User Bolometer Array
+
+SED - Spectral Energy Distribution
+
+SN(e) - Supernova(e)
+
+UV - Ultra-Violet
+
+VLT - Very Large Telescope
+
 
 %%---------------------------------------------------------
 %% Main Body
