--- a/thesis/front/abstract.tex
+++ b/thesis/front/abstract.tex
@@ -7,7 +7,7 @@
 \vspace{19mm}
 \end{raggedleft}
 
-\noindent{Galaxies and quasars in the very early universe harbour considerable masses of dust, the source of which has been much contested.  For many years it was thought that core-collapse supernovae, though known to form some dust from analyses of their dust emission in the infrared, could not account for the large quantities of dust seen in the early universe.  In recent years, however, this view has been challenged by the discovery of large reservoirs of cool dust in a number of supernova remnants, with some containing up to 1~M$_{\odot}$ of dust.  
+\noindent{Galaxies and quasars in the very early universe harbour considerable masses of dust, the source of which has been much contested.  For many years it was thought that core-collapse supernovae, though known to form small amounts of  dust from analyses of their dust emission in the infrared, could not account for the large quantities of dust seen in the early universe.  In recent years, however, this view has been challenged by the discovery of large reservoirs of cool dust in a number of supernova remnants, with some containing up to 1~M$_{\odot}$ of dust.  
 The late time optical and near-IR line profiles of many core-collapse supernova ejecta exhibit a red-blue asymmetry as a result of greater extinction by internal dust of radiation emitted from the receding parts of the ejecta.  In this thesis, I present  a new code, {\sc damocles}, that models the effects of dust on the line profiles of core-collapse supernovae in order to determine the masses of newly condensed dust that have formed in the ejecta.  The Monte Carlo code and the physical processes therein are described in detail and the testing of the code is presented.  Theoretical profiles are produced in order to understand the effects of varying the parameters of interest on the shapes of the modelled line profiles and I discuss a number of other signatures of dust extinction on line profiles aside from the expected blue-shifting.
 {\sc damocles} was used to model four different supernovae and supernova remnants.  SN~1987A is a crucial object in the study of core--collapse supernovae and I present a detailed investigation into the rate of dust formation in this object by modelling the evolution of the H$\alpha$ and [O~{\sc i}]$\lambda\lambda$6300,6363~\AA\ lines.  I also present models of the hydrogen and oxygen lines at late times from SN~1980K, SN~1993J and Cassiopeia A,  all of which display strong blue-shifted asymmetries.
 I find that large dust masses are required to fit the late-time line profiles of all of these objects and conclude that core-collapse supernovae are likely an important source of dust in the universe.}
