--- a/thesis/front/acknowledgements.tex
+++ b/thesis/front/acknowledgements.tex
@@ -13,10 +13,10 @@
 And so, there are just a few, very heartfelt and uncharacteristically emotional, thanks that I wish to make.}
 %\bigskip
 %\noindent 
-First and foremost, to Mike;  you have been endlessly patient and have always been generous with your time and advice.  You gave me the freedom and space to find my own path through my PhD, particularly in difficult times, and I am exceptionally grateful for this.  
+First and foremost, to Mike;  you have been endlessly patient and have always been generous with your time and advice.  You gave me the  space to find my own path through my PhD, particularly in difficult times, and I am so grateful for this.  
 %You have gone above and beyond, especially in difficult times, and I truly thank you.
 To Jeremy; %your support over the last three years has been invaluable. ]
-you advised me thoughtfully and carefully. Thanks for always having those encouraging words at the right moments.
+you advised me thoughtfully and carefully. Thanks for always having  encouraging words at the right moments.
 %  your encouragement always seemed to come at the right times.  
 To Patrick; %simply put, this thesis would not exist without you!  
 thank you for everything -- %for advice on science and on life, for gossipy drinks and endless cups of tea, for giggling from the start to the end, for your patient understanding and for tea gin. 
@@ -32,24 +32,28 @@ George,
 Jack,
 and
 Mike;  my luck in counting you as my friends is beyond words. %I know that every one of you would be there if I needed you, and 
-Thank you all for being there on so many occasions, happy and sad.
+Thank you for the
 % proved this on numerous occasions over the last three years.  
-My life is so much the better for having the conversation, laughter and wisdom that you all bring to it.  
+%My life is so much the better for having the 
+conversation, laughter and wisdom that you all bring to my life.  
 %\clearpage
 %\bigskip
 %\noindent 
-To Alex;  you really did a good job growing up these last few years.  I could not be prouder to call you my brother.  Knowing that you are always there for me means more to me than you know. 
+To Alex;  good job growing up! I could not be prouder to call you my brother.  Knowing that you are always there for me means so much. 
 %\bigskip
 %
 %\noindent 
-To Nick; you have been there for me in my darkest moments and my best.  
+To Nick; you have been there for me in my lowest moments and my best.  
 I cannot imagine having done this without you, and I have so many memories that I will cherish for the rest of my life.  
 You got me through this 
 %, as you get me through so much of my life.  
-and you brightened every day. I am so grateful.
+and I am so grateful.
 %\bigskip
 %\noindent 
-To Mum and Dad;  you have been, are, and will always be my best friends in the world.  Support does not even begin to cover what you have given me, not just over the last three years but my whole life.  You are both caring, generous and wise, and I am so lucky to be able to call you Mum and Dad.  Thank you.   
+To Mum and Dad;  you have been, are, and will always be my best friends in the world.  Support does not even begin to cover what you have given me, not just over the last three years but my whole life.  You are both caring, generous and wise, and I am so lucky to be able to call you Mum and Dad.  
+\bigskip
+
+\noindent{Thank you.}
 
 
 
