--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,48 @@
+@incollection{Barlow2009,
+year={2009},
+isbn={978-1-4020-9456-9},
+booktitle={Astrophysics in the Next Decade},
+series={Astrophysics and Space Science Proceedings},
+editor={Thronson, HarleyA. and Stiavelli, Massimo and Tielens, Alexander},
+title={Prospects for Studies of Stellar Evolution and Stellar Death in the JWST Era},
+publisher={Springer Netherlands},
+author={Barlow, MichaelJ.},
+pages={247-270},
+language={English}
+}
+
+
+@INPROCEEDINGS{Barlow1993,
+   author = {{Barlow}, M.~J.},
+    title = "{Dust in Planetary Nebulae and in Post-AGB Objects}",
+booktitle = {Planetary Nebulae},
+     year = 1993,
+   series = {IAU Symposium},
+   volume = 155,
+   editor = {{Weinberger}, R. and {Acker}, A.},
+    pages = {163},
+   adsurl = {http://adsabs.harvard.edu/abs/1993IAUS..155..163B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Fesen2001,
+   author = {{Fesen}, R.~A. and {Morse}, J.~A. and {Chevalier}, R.~A. and 
+	{Borkowski}, K.~J. and {Gerardy}, C.~L. and {Lawrence}, S.~S. and 
+	{van den Bergh}, S.},
+    title = "{Hubble Space Telescope WFPC2 Imaging of Cassiopeia A}",
+  journal = {\aj},
+   eprint = {astro-ph/0108193},
+ keywords = {ISM: Abundances, ISM: Individual: Name: Cassiopeia A, ISM: Kinematics and Dynamics, ISM: Supernova Remnants},
+     year = 2001,
+    month = nov,
+   volume = 122,
+    pages = {2644-2661},
+      doi = {10.1086/323539},
+   adsurl = {http://adsabs.harvard.edu/abs/2001AJ....122.2644F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Sibthorpe2010,
    author = {{Sibthorpe}, B. and {Ade}, P.~A.~R. and {Bock}, J.~J. and {Chapin}, E.~L. and 
 	{Devlin}, M.~J. and {Dicker}, S. and {Griffin}, M. and {Gundersen}, J.~O. and 
@@ -840,7 +885,7 @@ booktitle = {IAU Colloq. 145: Supernovae and Supernova Remnants},
 @INPROCEEDINGS{Garnavich1993,
    author = {{Garnavich}, P.~M. and {Ann}, H.~B.},
     title = "{Early Spectra of SN 1993J in M81}",
-booktitle = {American Astronomical Society Meeting Abstracts \#182},
+booktitle = {American Astronomical Society Meeting Abstracts 182},
      year = 1993,
    series = {Bulletin of the American Astronomical Society},
    volume = 25,
@@ -1961,7 +2006,6 @@ month = {1},
 year = {2013},
 pages = {328--329},
 numpages = {2},
-doi = {10.1017/S1743921313009666},
 }
 
 @INPROCEEDINGS{Morris2005,
@@ -2214,7 +2258,6 @@ booktitle = {IAU Symposium},
    editor = {{Ray}, A. and {McCray}, R.~A.},
     month = jan,
     pages = {9-14},
-      doi = {10.1017/S1743921313009162},
    adsurl = {http://adsabs.harvard.edu/abs/2014IAUS..296....9B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
@@ -2224,7 +2267,6 @@ year={2002},
 isbn={978-0-306-46562-8},
 booktitle={Origin of Elements in the Solar System},
 editor={Manuel, O.},
-doi={10.1007/0-306-46927-8_17},
 title={Measurement of the 44Ti Half-life and its Significance for Supernovae},
 publisher={Springer US},
 author={Ahmad, I. and Greene, J.P. and Kutschera, W. and Paul, M.},
@@ -3626,7 +3668,6 @@ year = {2015}
 @inproceedings{Lucy1989,
 author = {Lucy, L and Danziger, I and Gouiffes, C and Bouchet, P},
 booktitle = {IAU Colloq. 120: Structure and Dynamics of the Interstellar Medium, Lecture Notes in Physics},
-doi = {10.1007/BFb0114861},
 editor = {Tenorio-Tagle, G. and Moles, M. and Melnick, J.},
 file = {:Users/antoniabevan/Documents/Mendeley Desktop/Lucy et al/IAU Colloq. 120 Structure and Dynamics of the Interstellar Medium, Lecture Notes in Physics/Lucy et al. - 1989 - Dust condensation in the ejecta of SN 1987A.pdf:pdf},
 number = {350},
