--- a/thesis/front/acknowledgements.tex
+++ b/thesis/front/acknowledgements.tex
@@ -20,7 +20,7 @@ you advised me thoughtfully and carefully. Thanks for always having  encouraging
 %  your encouragement always seemed to come at the right times.  
 To Patrick; %simply put, this thesis would not exist without you!  
 thank you for everything -- %for advice on science and on life, for gossipy drinks and endless cups of tea, for giggling from the start to the end, for your patient understanding and for tea gin. 
-from science advice to gossip to tea gin, this thesis probably wouldn't exist without you!
+from science advice to gossip to tea-infused gin, this thesis probably wouldn't exist without you!
 %\bigskip 
 %\noindent 
 To 
@@ -28,8 +28,7 @@ Benedict,
 Dom,
 Fiona,
 Georgia,
-George,
-Jack,
+George
 and
 Mike;  my luck in counting you as my friends is beyond words. %I know that every one of you would be there if I needed you, and 
 Thank you for the
@@ -39,7 +38,7 @@ conversation, laughter and wisdom that you all bring to my life.
 %\clearpage
 %\bigskip
 %\noindent 
-To Alex;  good job growing up! I could not be prouder to call you my brother.  Knowing that you are always there for me means so much. 
+To Jack; you had to be there for much of it, but you didn't have to be the amazing support that you were.  Thanks for tirelessly dealing with my every up and down along the way.  To Alex;  good job growing up! I could not be prouder to call you my brother.  Knowing that you are always there for me means so much. 
 %\bigskip
 %
 %\noindent 
